odin-launcher.reload.log


Build succeeded, launching vk...
DEBUG: Initializing GLFW platform
DEBUG: GLFW platform setup complete
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: linux_read_sorted_physical_devices:
Validation layer:      Original order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU
Validation layer:      Sorted order:
Validation layer:            [0] NVIDIA GeForce RTX 4070 Laptop GPU  
Validation layer: Copying old device 0 into new device 0
Validation layer: Removing driver /usr/lib/libvulkan_intel.so due to not having any physical devices
Validation layer: Removing driver /usr/lib/libvulkan_intel_hasvk.so due to not having any physical devices
Validation layer: Inserted device layer "VK_LAYER_KHRONOS_validation" (/usr/lib/libVkLayer_khronos_validation.so)
Validation layer: Failed to find vkGetDeviceProcAddr in layer "/usr/lib/libVkLayer_MESA_device_select.so"
Validation layer: vkCreateDevice layer callstack setup to:
Validation layer:    <Application>
Validation layer:      ||
Validation layer:    <Loader>
Validation layer:      ||
Validation layer:    VK_LAYER_KHRONOS_validation
Validation layer:            Type: Explicit
Validation layer:            Enabled By: By the Application
Validation layer:            Manifest: /usr/share/vulkan/explicit_layer.d/VkLayer_khronos_validation.json
Validation layer:            Library:  /usr/lib/libVkLayer_khronos_validation.so
Validation layer:      ||
Validation layer:    <Device>
Validation layer:        Using "NVIDIA GeForce RTX 4070 Laptop GPU" with driver: "/usr/lib/libGLX_nvidia.so.0"
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
Discovered 2 shaders: compute.hlsl graphics.hlsl 
Window resized to 1856x1016
Recompiling compute.hlsl
compiling shader: compute.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
Recompiling compute.hlsl
compiling shader: compute.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
Recompiling compute.hlsl
compiling shader: compute.hlsl
compute.hlsl:149:46: error: unknown type name 'WorldCircle'
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
                                             ^
compute.hlsl:153:19: error: use of undeclared identifier 'WorldCircle'
        circle = (WorldCircle)0;
                  ^
compute.hlsl:293:18: error: no matching function for call to 'world_circle_from_cell'
            if (!world_circle_from_cell(cell, circle)) {
                 ^~~~~~~~~~~~~~~~~~~~~~
compute.hlsl:149:6: note: candidate function not viable: no known conversion from 'int' to 'WorldCircle' for 2nd argument
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
     ^                                                   ~~~~~~
compute.hlsl:883:18: error: no matching function for call to 'world_circle_from_cell'
            if (!world_circle_from_cell(cell, circle)) {
                 ^~~~~~~~~~~~~~~~~~~~~~
compute.hlsl:149:6: note: candidate function not viable: no known conversion from 'int' to 'WorldCircle' for 2nd argument
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
     ^                                                   ~~~~~~

Failed: compute.hlsl
Recompiling compute.hlsl
compiling shader: compute.hlsl
compute.hlsl:167:46: error: unknown type name 'WorldCircle'
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
                                             ^
compute.hlsl:171:19: error: use of undeclared identifier 'WorldCircle'
        circle = (WorldCircle)0;
                  ^
compute.hlsl:296:18: error: no matching function for call to 'world_circle_from_cell'
            if (!world_circle_from_cell(cell, circle)) {
                 ^~~~~~~~~~~~~~~~~~~~~~
compute.hlsl:167:6: note: candidate function not viable: no known conversion from 'int' to 'WorldCircle' for 2nd argument
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
     ^                                                   ~~~~~~
compute.hlsl:886:18: error: no matching function for call to 'world_circle_from_cell'
            if (!world_circle_from_cell(cell, circle)) {
                 ^~~~~~~~~~~~~~~~~~~~~~
compute.hlsl:167:6: note: candidate function not viable: no known conversion from 'int' to 'WorldCircle' for 2nd argument
bool world_circle_from_cell(float2 cell, out WorldCircle circle) {
     ^                                                   ~~~~~~

Failed: compute.hlsl
Recompiling compute.hlsl
compiling shader: compute.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: compute.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
compiling shader: graphics.hlsl
compiled shader successfully! ignore previous compile errors for this file: graphics.hlsl
Window resized to 1856x2056
Window resized to 1856x1016
Window resized to 1856x696
